2004-06-26	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* configure.in:  added checks for [n]curses libraries header files,
	  only select curses or ncurses if corresponding header is found.

2004-02-26	Michael Opdenacker	<michaelo@gnu.org>

	* Makefile.am: now requires automake 1.8.2

2004-02-23      Dmitry Rutsky   <rutsky@school.ioffe.rssi.ru>

	* README:  removed repeated or redundant lines in `Files' section,
	  changed the section's name to probably more appropriate. 

2003-11-23	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* tools/typcombine:  removed `ktlecten.typ' from the `More lessons...'
	  screen.
	* src/gtypist.c:  minor cleanups, fixed incorrect handling of
	  80-characters long lines in drills.

2003-11-16	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* autogen.sh:  use `autopoint' instead of `gettextize'.
	* configure.in, Makefile.am:  permanently added the gettext stuff,
	  removed "don't commit" warnings (the files will no longer be changed
	  in the build process).
	* m4/Makefile.am:  added.

2003-11-01	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* TODO:  documented "unchanging banners" bug.
	* lessons/ru.typ:  minor improvements.

2003-10-31	Dmitry Rutsky	<rutsky@school.ioffe.rssi.ru>

	* version.sh, autogen.sh, configure.in:  a better handling of version
	  definition.  Changed AC_INIT macro to handle current AC_INIT
	  semantics.
	* Makefile.am:  added `intl' to SUBDIRS to fix broken distribution.
	* lessons/ru.typ:  `#! /' typo was fixed.
	* src/cursmenu.c:  up-label, if present, now works as described in
	  the manual.  Most of the problems with ESCAPE key handling were
	  fixed.  Error messages in case of a nonexistent label will no
	  longer contain irrelevant script lines...
	* TODO:  ...nonetheless the line number is still irrelevant.

2003-10-26  Hynek Hanke  <hanke@volny.cz>

	* autogen.sh (gettexth): Added a search for gettext.h in /usr/ as Dmitry
	suggested.

	* po/cs.po: Updated.

2003-10-25  Hynek Hanke  <hanke@volny.cz>
	